--- a/frontend/src/components/drinks/drink_mood_form.css
+++ b/frontend/src/components/drinks/drink_mood_form.css
@@ -18,7 +18,7 @@
     margin: 0 auto;
 }
 .drink-form input {
-    margin: 10px;
+    margin: 9px;
 }
 
 .drinkform-btn {
