--- a/frontend/src/components/food_drink.css
+++ b/frontend/src/components/food_drink.css
@@ -47,8 +47,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 15%;
-    margin-bottom: 1%;
+    margin: 3% 25%;
     /* position: relative;
     right: 1rem;
     top: 11rem; */
