--- a/frontend/src/components/foods/food_form.css
+++ b/frontend/src/components/foods/food_form.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     font-size: 20px;
-    margin-top: 50px;
+    margin-top: 75px;
 }
 
 .foodform h2 {
@@ -18,7 +18,7 @@
     margin: 0 auto;
 }
 .food-form input {
-    margin: 10px;
+    margin: 9px;
 }
 
 .foodform-btn {
